# rfc

./: .gitignore  Cargo.toml  README.md  rfc.sample.toml
chatlogs/: chatlog-full.md
docs/superpowers/plans/: 2026-03-28-nes-emulator.md
docs/superpowers/specs/: 2026-03-28-nes-emulator-design.md
src/: apu.rs  audio.rs  bus.rs  cartridge.rs  config.rs  console.rs  cpu.rs  font.rs  joypad.rs  lib.rs  main.rs  menu.rs  ppu.rs  renderer.rs  shader.wgsl
src/mapper/: mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs  mod.rs
tests/: nestest.rs  nestest_cpu.rs
