[package]
name = "rfc"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "24"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
cpal = "0.15"
dirs = "6"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
