[package]
name = "rfc"
version = "0.2.0"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "24"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
cpal = "0.15"
dirs = "6"
bytemuck = { version = "1", features = ["derive"] }
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"
zip = "2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
